[emacs] Add shortdoc buffers to help and documentation category

--- a/emacs.org
+++ b/emacs.org
@@ -1823,8 +1823,8 @@ buffers.
 
   ;; Help and documentation buffers
   (setq koek-buff/doc-modes
-        '(help-mode helpful-mode Info-mode Man-mode apropos-mode devdocs-mode
-          cider-docview-mode sly-apropos-mode geiser-doc-mode))
+        '(help-mode helpful-mode shortdoc-mode Info-mode Man-mode apropos-mode
+          devdocs-mode cider-docview-mode sly-apropos-mode geiser-doc-mode))
   (setq koek-buff/doc-names
         (rx line-start
             (or "*eldoc*"
@@ -1832,6 +1832,7 @@ buffers.
                 "*sly-description*"
                 ;; When new buffer, major mode is set after calling
                 ;; `display-buffer'
+                "*Shortdoc"
                 "*info*"
                 "*Man"
                 ;; When no matches, major mode is `fundamental-mode'
