--- a/emacs.org
+++ b/emacs.org
@@ -1597,9 +1597,7 @@ steps.
   horizontally."
     (let* ((width (nth 2 (frame-monitor-geometry)))
            (step (/ width koek-wind/n-hor-steps))
-           (delta (if shrink
-                      (- step)
-                    step)))
+           (delta (if shrink (- step) step)))
       (window-resize nil delta (not vertical) nil 'pixelwise)))
 
   (defun koek-wind/grow (&optional arg)
