--- a/emacs.org
+++ b/emacs.org
@@ -2913,7 +2913,7 @@ VC is a placeholder.
 
   (use-package magit-files
     :bind
-    ("C-c f C-m" . magit-file-dispatch))
+    ("C-c f M-m" . magit-file-dispatch))
 
   (use-package magit-diff
     :defer t
