--- a/emacs.org
+++ b/emacs.org
@@ -2901,7 +2901,8 @@ VC is a placeholder.
 #+BEGIN_SRC emacs-lisp
   (use-package magit-mode
     :straight magit
-    :defer t
+    :bind
+    ("C-c f C-m" . magit-dispatch)
     :config
     (setq magit-buffer-name-format "*%M%V: %t*")
     (setq magit-display-buffer-function #'display-buffer)
