[emacs] Enable tree-sitter in python-mode

--- a/emacs.org
+++ b/emacs.org
@@ -3632,7 +3632,7 @@ produce noisy diffs.
     :after tree-sitter)
 
   (use-package tree-sitter-hl
-    :hook ((c-mode c++-mode java-mode js-mode) . tree-sitter-hl-mode))
+    :hook ((c-mode c++-mode java-mode js-mode python-mode) . tree-sitter-hl-mode))
 #+END_SRC
 
 ** xref - Jump to definition and references
