[emacs] Tweak heading keybindings

--- a/emacs.org
+++ b/emacs.org
@@ -6771,6 +6771,8 @@ Gnus is a placeholder.
     (use-package consult
       :bind
       (:map pdf-view-mode-map
+       ("C-c j h" . consult-imenu)
+       ("h" . consult-imenu)
        ("d" . consult-imenu)))
 
     (bind-keys
@@ -7902,12 +7904,12 @@ templates]].
     :bind
     (:map org-mode-map
      ("C-c o k" . org-clone-subtree-with-time-shift) ; [K]lone [sic]
-     ("C-M-f" . org-forward-heading-same-level)
-     ("C-M-b" . org-backward-heading-same-level)
-     ("C-M-n" . org-next-visible-heading)
-     ("C-M-p" . org-previous-visible-heading)
-     ("C-M-a" . org-previous-block)
-     ("C-M-e" . org-next-block))
+     ("C-c h f" . org-forward-heading-same-level)
+     ("C-c h b" . org-backward-heading-same-level)
+     ("C-c h n" . org-next-visible-heading)
+     ("C-c h p" . org-previous-visible-heading)
+     ("C-c h a" . org-previous-block)
+     ("C-c h e" . org-next-block))
     :hook
     ((window-setup . org-clock-persistence-insinuate) ; After initial buffer
      (org-mode . org-cdlatex-mode)
@@ -7916,11 +7918,12 @@ templates]].
     (use-package avy
       :bind
       (:map org-mode-map
-       ("C-c j h" . avy-org-goto-heading-timer)))
+       ("C-c j M-h" . avy-org-goto-heading-timer)))
 
     (use-package consult
       :bind
       (:map org-mode-map
+       ("C-c j h" . consult-org-heading)
        ([remap consult-imenu] . consult-org-heading)))
 
     (use-package org-clock
@@ -7941,7 +7944,7 @@ templates]].
     (use-package outline
       :bind
       (:map org-mode-map
-       ("C-M-u" . outline-up-heading)))
+       ("C-c h u" . outline-up-heading)))
 
     ;; General
     (push 'org-protocol org-modules)
