[emacs] Move prepcast to frames group

--- a/emacs.org
+++ b/emacs.org
@@ -7150,7 +7150,7 @@ Stavrou)]].
   ;; Copyright (C) 2020-2022 Nicolas De Jaeghere
 
   ;; Author: Nicolas De Jaeghere <nicolas@dejaeghe.re>
-  ;; Keywords: faces
+  ;; Keywords: frames
   ;; URL: <https://github.com/Koekelas/dotfiles>
 
   ;; This file is not part of GNU Emacs.
@@ -7183,7 +7183,7 @@ Stavrou)]].
 
   (defgroup prepcast nil
     "Prepare for screencasting."
-    :group 'faces)
+    :group 'frames)
 
   (defcustom prepcast-scale 1.25
     "Scale of elements."
