[emacs] Support keycast 2.0

--- a/emacs.org
+++ b/emacs.org
@@ -7252,10 +7252,10 @@ Stavrou)]].
     :straight t
     :defer t
     :config
-    (setq keycast-window-predicate #'moody-window-active-p)
-    (setq keycast-insert-after 'keycast-marker)
+    (setq keycast-mode-line-window-predicate #'moody-window-active-p)
+    (setq keycast-mode-line-insert-after 'keycast-marker)
     (setq keycast-separator-width 3)
-    (setq keycast-remove-tail-elements nil))
+    (setq keycast-mode-line-remove-tail-elements nil))
 #+END_SRC
 
 * Languages
