[emacs] Fix conf mode name

--- a/emacs.org
+++ b/emacs.org
@@ -7682,9 +7682,9 @@ configuration here so [[*CMake][cmake-mode]] and [[*Conf][conf-mode]] can shadow
             '(:eval
               ;; When mode-name is evaluated during mode line update,
               ;; inhibit-mode-name-delight is unbound or false
-              (if (not (bound-and-true-p inhibit-mode-name-delight))
-                  (alist-get major-mode koek-conf/mode-names)
-                "Conf")))))
+              (or (and (not (bound-and-true-p inhibit-mode-name-delight))
+                       (alist-get major-mode koek-conf/mode-names))
+                  "Conf")))))
 #+END_SRC
 
 ** Emacs Lisp
