[emacs] Defer loading org-src

--- a/emacs.org
+++ b/emacs.org
@@ -8065,6 +8065,7 @@ templates]].
     (setq org-refile-use-outline-path 'buffer-name))
 
   (use-package org-src
+    :defer t
     :preface
     (define-advice org-src--construct-edit-buffer-name
         (:override (org-buffer-name _lang) koek-org/construct-edit-buffer-name)
