[emacs] Support org 9.6

--- a/emacs.org
+++ b/emacs.org
@@ -8228,7 +8228,7 @@ It's part of tangling [[*yasnippet - Snippets][embedded snippets]].
     :defer t
     :config
     (setq org-latex-pdf-process '("latexmk -pdf %f"))
-    (setq org-latex-listings t)
+    (setq org-latex-src-block-backend 'listings)
 
     ;; Setup hyperref
     (let ((options
