--- a/emacs.org
+++ b/emacs.org
@@ -8406,6 +8406,72 @@ which requires AUCTeX.
     :delight (text-mode "Txt" :major))
 #+END_SRC
 
+*** outline - Outlines
+#+BEGIN_SRC emacs-lisp
+  (use-package outline
+    ;; outline-minor-mode-prefix, outline-mode-prefix-map, org
+    :bind
+    (:map outline-minor-mode-map
+     ("C-c h f" . outline-forward-same-level)
+     ("C-c h b" . outline-backward-same-level)
+     ("C-c h n" . outline-next-visible-heading)
+     ("C-c h p" . outline-previous-visible-heading)
+     ("C-c h u" . outline-up-heading)
+     ("C-c h RET" . outline-insert-heading))
+    :preface
+    (defun koek-otln/get-level ()
+      (length (match-string 1)))
+
+    ;; capture group
+    (defmacro koek-otln/set-headings (modes pattern)
+      (declare (indent 1))
+      (let ((value-sym (gensym)))
+        `(let ((,value-sym ,pattern))
+           ,@(seq-mapcat
+              (lambda (mode)
+                (let* ((prefix "koek-otln/")
+                       (mode-name (symbol-name mode))
+                       (pattern-sym (koek-subr/intern
+                                     prefix mode-name "-pattern"))
+                       (f-sym (koek-subr/intern
+                               prefix "setup-" mode-name "-pattern"))
+                       (hook-sym (koek-subr/intern mode-name "-hook")))
+                  `((defvar ,pattern-sym ,value-sym
+                      ,(format "Regular expression matching a heading in `%s'."
+                               mode-name))
+
+                    (defun ,f-sym ()
+                      ,(format "Setup heading pattern in `%s'" mode-name)
+                      (setq-local outline-regexp ,pattern-sym)
+                      (setq-local outline-level #'koek-otln/get-level))
+
+                    ;; Setup then enable. `add-hook' adds to the front.
+                    ;; The reverse has no effect.
+                    (add-hook ',hook-sym #'outline-minor-mode)
+                    (add-hook ',hook-sym #',f-sym))))
+              modes))))
+
+    (koek-otln/set-headings (clojure-mode lisp-mode emacs-lisp-mode scheme-mode)
+      (rx ";;" (group-n 1 (one-or-more ";")) " "))
+    (koek-otln/set-headings (c-mode c++-mode java-mode js-mode scad-mode)
+      (rx "//" (group-n 1 (one-or-more "/")) " "))
+    (koek-otln/set-headings (erlang-mode octave-mode)
+      (rx "%%" (group-n 1 (one-or-more "%")) " "))
+    (koek-otln/set-headings (css-mode)
+      (rx "/*" (group-n 1 (one-or-more "*")) " "))
+    (koek-otln/set-headings (python-mode)
+      (rx "#" (group-n 1 (one-or-more "#")) " "))
+    :config
+    (use-package consult
+      :bind
+      (:map outline-minor-mode-map
+       ("C-c j h" . consult-outline)))
+
+    (setq outline-minor-mode-cycle t)
+    (setq outline-minor-mode-highlight 'override)
+    :delight outline-minor-mode)
+#+END_SRC
+
 ** Wolfram Language
 [[https://github.com/kawabata/wolfram-mode][wolfram-mode (GitHub)]]
 
