[emacs] Tweak appearance buttons

--- a/emacs.org
+++ b/emacs.org
@@ -8607,6 +8607,7 @@ current theme.
               (2 . (1.2 ,@defaults))
               (3 . (1.1 ,@defaults))
               (t . ,defaults))))
+    (setq modus-themes-box-buttons '(flat variable-pitch))
     (setq modus-themes-org-blocks 'gray-background)
     :config
     (koek-mt/load 'vivendi))
