[emacs] Tweak comment

--- a/emacs.org
+++ b/emacs.org
@@ -3006,7 +3006,7 @@ VC is a placeholder.
     :preface
     ;; `ediff-before-setup-hook' is too early, the control buffer isn't
     ;; yet created. `ediff-startup-hook' is too late, the window
-    ;; configuration was already modified.
+    ;; configuration was already altered.
     (define-advice ediff-setup
         (:around (f &rest args) koek-diff/setup-restore-window-config)
       (let ((config (current-window-configuration))
