[emacs] Add Verbouwing e-mail bookmark

--- a/emacs.org
+++ b/emacs.org
@@ -9585,6 +9585,9 @@ the instructions on storing passwords.
             (:name "Applied Artificial Intelligence"
              :query "maildir:/Personal/Opleidingen/AAI"
              :key ?a)
+            (:name "Verbouwing"
+             :query "maildir:/Personal/Verbouwing"
+             :key ?v)
             (:name "Unread"
              :query "flag:unread"
              :key ?u))))
