--- a/dotfiles.org
+++ b/dotfiles.org
@@ -433,7 +433,7 @@ To apply configuration, run:
   org.gnome.Weather.desktop
   org.gnome.clocks.desktop
   org.octave.Octave.desktop
-  wireshark.desktop
+  org.wireshark.Wireshark.desktop
   wolfram-mathematica11.desktop
 #+END_SRC
 
