[gnome] Update FreeCAD app ID

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -335,10 +335,10 @@ To apply configuration, run:
   ardour7.desktop
   blender.desktop
   calf.desktop
-  freecad.desktop
   gimp.desktop
   openscad.desktop
   org.fontforge.FontForge.desktop
+  org.freecadweb.FreeCAD.desktop
   org.inkscape.Inkscape.desktop
   org.pitivi.Pitivi.desktop
   scribus.desktop
